<resources>
    <string name="app_name">Assignment_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_image_content_description">Movie Poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_genre">Genre</string>
    <string name="movie_book_seats_button">Book Seats</string>
    <string name="movie_trailer_button">Trailer</string>
    <string name="now_showing_select_date">Select Date</string>
    <string name="now_showing_today">Today</string>
    <string name="now_showing_tomorrow">Tomorrow</string>
    <string name="snack_name">Snack Name</string>
    <string name="snack_details">Details</string>
    <string name="snack_price">Price</string>
    <string name="snack_decrease">-</string>
    <string name="snack_quantity">0</string>
    <string name="snack_increase">+</string>
    <string name="snack_image_content_description">Snack Image</string>
    <string name="splash_app_logo_content_description">Application Logo</string>
    <string name="ticket_summary_title">Ticket Summary</string>
    <string name="movie_playing_details">ScreenX Dolby Atmos</string>
    <string name="ticket_summary_button_text">Confirm and Send Ticket</string>

    <string name="back">Back</string>
    <string name="booking_details">Booking details</string>

    <string name="booked">Booked</string>
    <string name="yours">Yours</string>
    <string name="available">Available</string>

    <string name="book_seats">Book Seats</string>
    <string name="proceed_to_snacks">Proceed to Snacks</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

</resources>