<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/app_rounded_grey_tile"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:id="@+id/ivSnackImage"
            android:contentDescription="@string/snack_image_content_description"
            android:src="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSnackName"
                android:text="@string/snack_name"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSnackDetails"
                android:text="@string/snack_details"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snack_price"
                android:id="@+id/tvPrice"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDecrease"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:background="#374151"
                    android:text="@string/snack_decrease"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvQuantity"
                    android:layout_width="50dp"
                    android:layout_height="38dp"
                    android:text="@string/snack_quantity"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnIncrease"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:background="#EE0000"
                    android:text="@string/snack_increase"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="1.5" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>