<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseSeatsFragment"
    android:orientation="vertical">

<!--    The information (Metadata) part -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:background="#c4c4c4"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/app_back_button"
            android:layout_marginStart="20dp"
            android:id="@+id/btnBack"/>

        <!--Movie title, subject to change as passed through the intent-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingHorizontal="15dp"
            android:id="@+id/tvMovieTitle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

<!--        Now I have to work on this as well-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/back"
            android:src="@drawable/app_choose_seats_booking_details" />

    </LinearLayout>

<!--    The Seats part -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:background="@color/black"
        android:gravity="center">

        <GridLayout
            android:id="@+id/glSeating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:columnCount="9"
            android:rowCount="8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/black">

        <View
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_weight="1"/>

        <View
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="@drawable/app_choose_seats_seat"
            android:id="@+id/vBooked"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booked"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"/>

        <View
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_weight="1" />

        <View
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="@drawable/app_choose_seats_seat"
            android:id="@+id/vYours"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yours"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_weight="1"/>

        <View
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="@drawable/app_choose_seats_seat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_weight="1"/>
    </LinearLayout>

<!--    The proceeding buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#161a21"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_height="50dp"
            android:background="@drawable/app_red_button"
            android:text="@string/book_seats"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/btnBookSeats"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_height="50dp"
            android:background="@drawable/app_red_button"
            android:text="@string/proceed_to_snacks"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/btnProceedToSnacks"/>
    </LinearLayout>
</LinearLayout>