<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NowShowingFragment"
    android:orientation="vertical"
    android:paddingHorizontal="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_showing_select_date"
        android:textSize="12sp"
        android:fontFamily="@font/poppins"
        />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToday"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:text="@string/now_showing_today"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/app_toggle_button"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_button_dot"
            android:drawableTint="@color/white"
            android:paddingStart="8dp"
            android:gravity="center"
            android:drawablePadding="-10dp" />
        <View
            android:layout_width="6dp"
            android:layout_height="30dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTomorrow"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_weight="1.4"
            android:text="@string/now_showing_tomorrow"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/app_toggle_button"
            android:drawableStart="@drawable/ic_button_dot"
            android:drawableTint="@color/white"
            android:paddingStart="8dp"
            android:gravity="center"
            android:drawablePadding="-10dp" />
        <View
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="30dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/rv"/>

</LinearLayout>