<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/app_back_button"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/btnBack" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:layout_height="wrap_content"
                android:text="@string/ticket_summary_title"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/app_back_button"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="22dp">

            <ImageView  android:layout_width="80dp"
                android:layout_height="100dp"
                android:contentDescription="@string/movie_image_content_description"
                android:src="@drawable/movie_placeholder"
                android:id="@+id/ivMoviePoster" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_title"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:id="@+id/tvMovieTitle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_playing_details"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/app_choose_seats_booking_details" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1f2937" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tickets"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="22sp" />

                    <TextView
                        android:id="@+id/tvTicketsList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tickets will appear here"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins"
                        android:lineSpacingExtra="8dp"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:id="@+id/tvSnacksHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppins"
                        android:text="Snacks"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/tvSnacksList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Snacks will appear here"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins"
                        android:lineSpacingExtra="8dp"
                        android:layout_marginTop="10dp"
                        android:visibility="invisible" />

        </LinearLayout>
            </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#1f2937" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TOTAL"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PRICE"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="22sp"
                android:id="@+id/tvTotalPrice"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#161a21">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="50dp"
            android:background="@drawable/app_red_button"
            android:text="@string/ticket_summary_button_text"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/btnConfirm" />
    </LinearLayout>
</LinearLayout>
